--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "packageManager": "pnpm@10.12.1",
   "name": "assessment",
   "private": true,
   "version": "0.0.0",
@@ -30,5 +31,6 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
-  }
+  },
+  "pnpm": {}
 }
