--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -34,7 +34,7 @@ jobs:
           node-version: lts/*
           cache: 'pnpm'
       - name: Install dependencies
-        run: pnpm install 
+        run: pnpm i --frozen-lockfile 
       - name: Build
         run: pnpm build
       - name: Setup Pages
